0.7 (2012-12-30)
----------------

- Write unauthenticated userid and ``request.path_info`` as transaction
  metadata via ``t.setUser`` and ``t.note`` respectively during a commit.

0.6 (2012-12-26)
----------------

- Disuse the confusing and bug-ridden generator-plus-context-manager "attempts"
  mechanism from the transaction package for retrying retryable exceptions
  (e.g. ZODB ConflictError).  Use a simple while loop plus a counter and
  imperative logic instead.

0.5 (2012-06-26)
----------------

Bug Fixes
~~~~~~~~~

- When a non-retryable exception was raised as the result of a call to
  ``transaction.manager.commit``, the exception was not reraised properly.
  Symptom: an unrecoverable exception such as ``Unsupported: Storing blobs in
  <somestorage> is not supported.`` would be swallowed inappropriately.

0.4 (2012-03-28)
----------------

Bug Fixes
~~~~~~~~~

- Work around failure to retry ConflictError properly at commit time by the
  ``transaction`` 1.2.0 package.  See
  https://mail.zope.org/pipermail/zodb-dev/2012-March/014603.html for
  details.

Testing
~~~~~~~

- No longer tested under Python 2.5 by ``tox.ini`` (and therefore no longer
  tested under 2.5 by the Pylons Jenkins server).  The package may still work
  under 2.5, but automated tests will no longer show breakage when it changes
  in ways that break 2.5 support.

- Squash test deprecation warnings under Python 3.2.

0.3 (2011-09-27)
----------------

Features
~~~~~~~~

- The transaction manager has been converted to a Pyramid 1.2 "tween"
  (instead of an event subscriber).  It will be slotted directly "below" the
  exception view handler, meaning it will have a chance to handle exceptions
  before they are turned into responses.  This means it's best to "raise
  HTTPFound(...)" instead of "return HTTPFound(...)" if you want an HTTP
  exception to abort the transaction.

- The transaction manager will now retry retryable exceptions (such as a ZODB