@@ -12,3 +12,4 @@ dist/
 nosetests.xml
 pyramid_tm/coverage.xml
 env*/
+venv/
