@@ -1,3 +1,9 @@
+Unreleased
+----------
+
+- Don't call `setUser` on transaction if there is no user logged in.  This could
+  cause the username set on the transaction to be a strange string: " None".
+
 0.7 (2012-12-30)
 ----------------
 
